--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.Journal1"
         tools:targetApi="31">
         <activity
+            android:name=".detailedActivity"
+            android:noHistory="true"
+            android:exported="false" />
+        <activity
             android:name=".splashscreen"
             android:exported="true"
             android:noHistory="true">
@@ -24,8 +28,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false"
-            android:noHistory="true">
+            android:exported="false">
 
         </activity>
     </application>
